# brave-core

android/: brave_java_sources.gni
app/: DEPS  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc
browser/: BUILD.gn  brave_content_browser_client.cc  brave_content_browser_client.h  sources.gni
browser/autocomplete/: sources.gni
browser/brave_rewards/: sources.gni
browser/brave_shields/: domain_block_page_browsertest.cc
browser/component_updater/: sources.gni
browser/download/: sources.gni
browser/gemini/: sources.gni
browser/greaselion/: sources.gni
browser/ipfs/: sources.gni
browser/ipfs/import/: ipfs_import_controller.cc  ipfs_import_controller.h  ipfs_import_controller_browsertest.cc  save_package_observer.h
browser/ipfs/test/: BUILD.gn  ipfs_service_browsertest.cc
browser/ui/: BUILD.gn
chromium_src/chrome/browser/: DEPS  (+1 more)
components/definitions/: chromel.d.ts
components/ipfs/: ipfs_service.cc
patches/: chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-resources-settings-site_settings-category_default_setting.js.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-startup-startup_browser_creator_impl.cc.patch  chrome-test-BUILD.gn.patch  components-sync-protocol-proto_visitors.h.patch  content-browser-renderer_host-navigation_request.cc.patch
test/: BUILD.gn
(+27 files in other folders)
