brave_browser_download_sources = [
  "//brave/browser/download/brave_download_item_model.cc",
  "//brave/browser/download/brave_download_item_model.h",
]

brave_browser_download_deps = [
  "//base",
  "//components/download/public/common:public",
  "//components/strings:components_strings_grit",
  "//services/network/public/cpp",
  "//ui/base",
  "//ui/gfx",
  "//url",
]
